--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-timeago",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "A simple Time-Ago component for ReactJs",
   "main": "timeago.js",
   "scripts": {
@@ -25,6 +25,6 @@
   },
   "homepage": "https://github.com/naman34/react-timeago",
   "peerDependencies": {
-    "react": "0.11.0 - 0.12.9"
+    "react": "^0.12.0"
   }
 }
