--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
     "no-underscore-dangle": [0],
     "no-cond-assign" : 0,
     "indent": [2, 2],
-    semi: [2, "never"],
+    "semi": [2, "never"],
     "comma-style": [2, "first"]
   }
 }
