--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-timeago",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "A simple Time-Ago component for ReactJs",
   "main": "timeago.js",
   "scripts": {
@@ -26,5 +26,8 @@
   "homepage": "https://github.com/naman34/react-timeago",
   "peerDependencies": {
     "react": ">=0.12.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^3.1.19"
   }
 }
