--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/nmn/react-timeago",
   "peerDependencies": {
-    "react": ">=0.12.0"
+    "react": ">=0.12.0",
+    "react-intl": "^1.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^3.1.19"
