--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-timeago",
-  "version": "3.0.0-beta.1",
+  "version": "3.0.0-beta.2",
   "description": "A simple Time-Ago component for ReactJs",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "cpflow": "for f in `pwd`/src/*; do cp $f `pwd`/lib/$(basename $f).flow; done",
     "babel": "babel src/ --out-dir lib/",
-    "example": "browserify -t babelify examples/simple/index.js -o examples/simple/bundle.js",
+    "example": "browserify -t babelify --debug examples/simple/index.js -o examples/simple/bundle.js",
     "build": "npm run babel && npm run cpflow && npm run example",
     "prepublish": "npm run build"
   },
