chore(code-style): tweak the code style a bit.

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,8 @@
   "globals": {
     "React$Element": false,
     "ReactClass": false
+  },
+  "rules": {
+    operator-linebreak: ["error", "before"]
   }
 }
