--- a/package.json
+++ b/package.json
@@ -1,60 +1,63 @@
 {
-  "name": "react-timeago",
-  "version": "3.0.0",
-  "description": "A simple Time-Ago component for ReactJs",
-  "main": "lib/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "cpflow": "for f in `pwd`/src/*; do cp $f `pwd`/lib/$(basename $f).flow; done",
-    "babel": "babel src/ --out-dir lib/",
-    "example": "browserify -t babelify --debug examples/simple/index.js -o examples/simple/bundle.js",
-    "build": "npm run babel && npm run cpflow && npm run example",
-    "prepublish": "npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/naman34/react-timeago.git"
-  },
-  "keywords": [
-    "React",
-    "ReactJS",
-    "Time",
-    "Ago",
-    "TimeAgo",
-    "ender"
-  ],
-  "author": "Naman Goel",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/nmn/react-timeago/issues"
-  },
-  "homepage": "https://github.com/nmn/react-timeago",
-  "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-eslint": "^6.0.3",
-    "babel-plugin-syntax-flow": "^6.5.0",
-    "babel-plugin-syntax-jsx": "^6.5.0",
-    "babel-plugin-transform-flow-comments": "^6.7.0",
-    "babel-plugin-transform-flow-strip-types": "^6.7.0",
-    "babel-plugin-transform-react-jsx": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
-    "eslint": "^2.8.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-config-standard-react": "^2.3.0",
-    "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-react": "^5.0.1",
-    "eslint-plugin-standard": "^1.3.2",
-    "react": "^15.0.0-rc.2",
-    "react-dom": "^15.0.0-rc.2"
-  },
-  "dependencies": {
-    "object-assign": "^4.0.1"
-  }
+    "name": "react-timeago",
+    "version": "3.0.0",
+    "description": "A simple Time-Ago component for ReactJs",
+    "main": "lib/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "cpflow": "for f in `pwd`/src/*; do cp $f `pwd`/lib/$(basename $f).flow; done",
+        "babel": "babel src/ --out-dir lib/",
+        "example": "browserify -t babelify --debug examples/simple/index.js -o examples/simple/bundle.js",
+        "build": "npm run babel && npm run cpflow && npm run example",
+        "prepublish": "npm run build"
+    },
+    "files": [
+        "src"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/naman34/react-timeago.git"
+    },
+    "keywords": [
+        "React",
+        "ReactJS",
+        "Time",
+        "Ago",
+        "TimeAgo",
+        "ender"
+    ],
+    "author": "Naman Goel",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/nmn/react-timeago/issues"
+    },
+    "homepage": "https://github.com/nmn/react-timeago",
+    "peerDependencies": {
+        "react": "^0.14.0 || ^15.0.0-0"
+    },
+    "devDependencies": {
+        "babel-cli": "^6.7.5",
+        "babel-eslint": "^6.0.3",
+        "babel-plugin-syntax-flow": "^6.5.0",
+        "babel-plugin-syntax-jsx": "^6.5.0",
+        "babel-plugin-transform-flow-comments": "^6.7.0",
+        "babel-plugin-transform-flow-strip-types": "^6.7.0",
+        "babel-plugin-transform-react-jsx": "^6.7.5",
+        "babel-preset-es2015": "^6.6.0",
+        "babel-preset-react": "^6.5.0",
+        "babel-preset-stage-1": "^6.5.0",
+        "babelify": "^7.2.0",
+        "browserify": "^13.0.0",
+        "eslint": "^2.8.0",
+        "eslint-config-standard": "^5.1.0",
+        "eslint-config-standard-react": "^2.3.0",
+        "eslint-plugin-promise": "^1.1.0",
+        "eslint-plugin-react": "^5.0.1",
+        "eslint-plugin-standard": "^1.3.2",
+        "react": "^15.0.0-rc.2",
+        "react-dom": "^15.0.0-rc.2"
+    },
+    "dependencies": {
+        "object-assign": "^4.0.1"
+    }
 }
