--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "prepublish": "npm run build"
     },
     "files": [
-        "src"
+        "lib"
     ],
     "repository": {
         "type": "git",
