--- a/package.json
+++ b/package.json
@@ -33,24 +33,26 @@
     "react": "^0.14.0 || ^15.0.0-0"
   },
   "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-eslint": "^6.0.3",
+    "babel-cli": "^6.10.1",
+    "babel-eslint": "^6.1.2",
     "babel-plugin-syntax-flow": "^6.5.0",
     "babel-plugin-syntax-jsx": "^6.5.0",
-    "babel-plugin-transform-flow-comments": "^6.7.0",
     "babel-plugin-transform-flow-strip-types": "^6.7.0",
     "babel-plugin-transform-react-jsx": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
-    "eslint": "^2.8.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-config-standard-react": "^2.3.0",
-    "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-react": "^5.0.1",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "eslint": "^3.0.1",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-config-standard-react": "^2.5.0",
+    "eslint-plugin-flow-vars": "^0.4.0",
+    "eslint-plugin-flowtype": "^2.3.0",
+    "eslint-plugin-promise": "^1.3.2",
+    "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^1.3.2",
+    "object-assign": "^4.1.0",
     "react": "^15.0.0-rc.2",
     "react-dom": "^15.0.0-rc.2"
   },
