feat(languages): Adds a formatter builder based on jquery-timeago strings format.
- Release 3.1.0
- Adds supports for 10s of languages
- Add documentation for 3.0
- Export flow types
- Filter out own props before passing down.
- Update dependencies

closes #39

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "ReactClass": false
   },
   "rules": {
-    operator-linebreak: ["error", "before"]
+    "operator-linebreak": ["error", "before"],
+    "react/prop-types": 0
   }
 }
