--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "A simple Time-Ago component for ReactJs",
   "main": "lib/index.js",
   "scripts": {
-    "test": "ava --require babel-register",
     "cpflow": "find ./src -name '*.js' -not -path '*/__*' | while read filepath; do cp $filepath `echo $filepath | sed 's/\\/src\\//\\/lib\\//g'`.flow; done",
     "babel": "babel src/ --out-dir lib/",
     "example": "browserify -t babelify --debug examples/simple/index.js -o examples/simple/bundle.js",
     "build": "npm run babel && npm run cpflow && npm run example",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "ava --require babel-register",
+    "coverall": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
-	"ava": {
-		"babel": "inherit"
-	},
+  "ava": {
+    "babel": "inherit"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/naman34/react-timeago.git"
@@ -48,6 +49,7 @@
     "babel-preset-stage-1": "^6.5.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
+    "coveralls": "^2.11.12",
     "enzyme": "^2.4.1",
     "eslint": "^3.0.1",
     "eslint-config-standard": "^5.3.1",
@@ -57,6 +59,7 @@
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^1.3.2",
+    "nyc": "^8.0.0",
     "react": "^15.0.0-rc.2",
     "react-addons-test-utils": "^15.3.0",
     "react-dom": "^15.0.0-rc.2"
