--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-timeago",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "description": "A simple Time-Ago component for ReactJs",
   "main": "lib/index.js",
   "scripts": {
@@ -34,35 +34,35 @@
   },
   "homepage": "https://github.com/nmn/react-timeago",
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0"
+    "react": "^15.0.0"
   },
   "devDependencies": {
     "ava": "^0.16.0",
-    "babel-cli": "^6.10.1",
+    "babel-cli": "^6.14.0",
     "babel-eslint": "^6.1.2",
-    "babel-plugin-syntax-flow": "^6.5.0",
-    "babel-plugin-syntax-jsx": "^6.5.0",
-    "babel-plugin-transform-flow-strip-types": "^6.7.0",
+    "babel-plugin-syntax-flow": "^6.13.0",
+    "babel-plugin-syntax-jsx": "^6.13.0",
+    "babel-plugin-transform-flow-strip-types": "^6.14.0",
     "babel-plugin-transform-react-jsx": "^6.7.5",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-stage-1": "^6.13.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.0.1",
+    "browserify": "^13.1.0",
     "coveralls": "^2.11.12",
     "enzyme": "^2.4.1",
-    "eslint": "^3.0.1",
-    "eslint-config-standard": "^5.3.1",
-    "eslint-config-standard-react": "^2.5.0",
-    "eslint-plugin-flow-vars": "^0.4.0",
-    "eslint-plugin-flowtype": "^2.3.0",
-    "eslint-plugin-promise": "^1.3.2",
-    "eslint-plugin-react": "^5.2.2",
-    "eslint-plugin-standard": "^1.3.2",
+    "eslint": "^3.4.0",
+    "eslint-config-standard": "^6.0.0",
+    "eslint-config-standard-react": "^4.0.0",
+    "eslint-plugin-flow-vars": "^0.5.0",
+    "eslint-plugin-flowtype": "^2.16.0",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-react": "^6.2.0",
+    "eslint-plugin-standard": "^2.0.0",
     "nyc": "^8.0.0",
     "react": "^15.0.0-rc.2",
     "react-addons-test-utils": "^15.3.0",
-    "react-dom": "^15.0.0-rc.2"
+    "react-dom": "^15.3.1"
   },
   "dependencies": {}
 }
