update dev dependencies

--- a/package.json
+++ b/package.json
@@ -37,33 +37,33 @@
     "react": "^15.0.0"
   },
   "devDependencies": {
-    "ava": "^0.16.0",
-    "babel-cli": "^6.14.0",
-    "babel-eslint": "^6.1.2",
-    "babel-plugin-syntax-flow": "^6.13.0",
-    "babel-plugin-syntax-jsx": "^6.13.0",
-    "babel-plugin-transform-flow-strip-types": "^6.14.0",
-    "babel-plugin-transform-react-jsx": "^6.7.5",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.13.0",
-    "babel-register": "^6.18.0",
+    "ava": "^0.19.1",
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-syntax-flow": "^6.18.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-register": "^6.24.1",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
-    "coveralls": "^2.11.12",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.4.0",
-    "eslint-config-standard": "^6.0.0",
-    "eslint-config-standard-react": "^4.0.0",
+    "browserify": "^14.4.0",
+    "coveralls": "^2.13.1",
+    "enzyme": "^2.9.0",
+    "eslint": "^4.0.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-flow-vars": "^0.5.0",
-    "eslint-plugin-flowtype": "^2.16.0",
-    "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-react": "^6.2.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "nyc": "^8.0.0",
-    "react": "^15.0.0-rc.2",
-    "react-addons-test-utils": "^15.3.0",
-    "react-dom": "^15.3.1"
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "nyc": "^11.0.2",
+    "react": "^15.6.1",
+    "react-addons-test-utils": "^15.6.0",
+    "react-dom": "^15.6.1"
   },
   "dependencies": {}
 }
