--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,23 @@ jobs:
       - run: npm i
       - run: npm test
 
-    deployment:
-      npm:
-        tag: /v[0-9]+(\.[0-9]+)*/
-        commands:
-          - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-          - run: npm publish
+  deploy:
+    working_directory: /home/timeago
+    steps:
+      - checkout
+      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+      - run: npm publish
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
