--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "browserify": "^16.2.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "flow-bin": "^0.90.0",
     "jest": "^22.4.3",
     "prettier": "1.12.0",
     "react": "^16.3.1",
