--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-timeago",
-  "version": "4.4.0",
+  "version": "5.0.0",
   "description": "A simple Time-Ago component for ReactJs",
   "main": "lib/index.js",
   "scripts": {
@@ -10,12 +10,6 @@
     "build": "npm run babel && npm run cpflow && npm run example",
     "prepublish": "npm run build",
     "test": "jest --coverage"
-  },
-  "ava": {
-    "babel": "inherit",
-    "require": [
-      "babel-register"
-    ]
   },
   "repository": {
     "type": "git",
@@ -36,30 +30,30 @@
   },
   "homepage": "https://github.com/nmn/react-timeago",
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0"
+    "react": "^16.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.4.3",
-    "babel-plugin-syntax-flow": "^6.13.0",
-    "babel-plugin-syntax-jsx": "^6.13.0",
-    "babel-plugin-transform-flow-strip-types": "^6.14.0",
-    "babel-plugin-transform-react-jsx": "^6.7.5",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.13.0",
-    "babelify": "^8.0.0",
-    "browserify": "^16.2.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "flow-bin": "^0.90.0",
-    "jest": "^22.4.3",
-    "prettier": "1.12.0",
-    "react": "^16.3.1",
-    "react-addons-test-utils": "^15.3.0",
-    "react-dom": "^16.3.1"
+    "@babel/cli": "^7.11.0",
+    "@babel/core": "^7.11.0",
+    "@babel/plugin-syntax-flow": "^7.10.4",
+    "@babel/plugin-syntax-jsx": "^7.10.4",
+    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
+    "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-flow": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-stage-1": "^7.8.3",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "babel-jest": "^26.3.0",
+    "babelify": "^10.0.0",
+    "browserify": "^16.5.2",
+    "flow-bin": "^0.135.0",
+    "jest": "^26.4.2",
+    "prettier": "2.1.2",
+    "react": "^16.13.1",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.13.1"
   },
   "dependencies": {},
   "prettier": {
