--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-timeago",
-  "version": "5.2.2",
+  "version": "5.3.0",
   "description": "A simple Time-Ago component for ReactJs",
   "main": "lib/index.js",
   "scripts": {
@@ -33,29 +33,35 @@
     "react": "^16.0.0 || ^17.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.0",
-    "@babel/core": "^7.11.0",
-    "@babel/plugin-syntax-flow": "^7.10.4",
-    "@babel/plugin-syntax-jsx": "^7.10.4",
-    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
-    "@babel/plugin-transform-react-jsx": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-flow": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.2",
+    "@babel/eslint-parser": "^7.14.2",
+    "@babel/plugin-syntax-flow": "^7.12.13",
+    "@babel/plugin-syntax-jsx": "^7.12.13",
+    "@babel/plugin-transform-flow-strip-types": "^7.13.0",
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-flow": "^7.13.13",
+    "@babel/preset-react": "^7.13.13",
     "@babel/preset-stage-1": "^7.8.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "babel-jest": "^26.3.0",
     "babelify": "^10.0.0",
     "browserify": "^16.5.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-import": "^2.23.0",
     "flow-bin": "^0.151.0",
     "jest": "^26.4.2",
     "prettier": "^2.3.0",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.13.1"
+    "react-dom": "^17.0.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "eslint": "^7.26.0"
+  },
   "prettier": {
     "printWidth": 80,
     "parser": "flow",
