--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "react-timeago",
-  "version": "5.3.0",
+  "version": "6.0.0",
   "description": "A simple Time-Ago component for ReactJs",
   "main": "lib/index.js",
+  "module": "es6/index.js",
   "scripts": {
-    "babel": "babel src/ --out-dir lib/",
-    "build": "npm run babel && npm run cpflow && npm run example",
+    "babel-es6": "babel src/ --out-dir es6/ --presets=@babel/react,@babel/flow",
+    "babel": "babel src/ --out-dir lib/ --presets=@babel/env,@babel/react,@babel/flow",
+    "build": "npm run babel && npm run babel-es6 && npm run cpflow && npm run cpflow-es6 && npm run example",
+    "cpflow-es6": "find ./src -name '*.js' -not -path '*/__*' | while read filepath; do cp $filepath `echo $filepath | sed 's/\\/src\\//\\/es6\\//g'`.flow; done",
     "cpflow": "find ./src -name '*.js' -not -path '*/__*' | while read filepath; do cp $filepath `echo $filepath | sed 's/\\/src\\//\\/lib\\//g'`.flow; done",
-    "example": "browserify -t babelify --debug examples/simple/index.js -o examples/simple/bundle.js",
+    "example": "rollup -c ./rollup.config.js",
     "prepublish": "npm run build",
     "test": "jest --coverage"
   },
@@ -44,11 +47,13 @@
     "@babel/preset-flow": "^7.13.13",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-stage-1": "^7.8.3",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-replace": "^2.4.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "babel-jest": "^26.3.0",
-    "babelify": "^10.0.0",
-    "browserify": "^17.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-import": "^2.23.0",
@@ -57,7 +62,8 @@
     "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "rollup": "^2.47.0"
   },
   "dependencies": {
     "eslint": "^7.26.0"
