--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-timeago",
-  "version": "6.0.0",
+  "version": "6.1.0",
   "description": "A simple Time-Ago component for ReactJs",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -56,14 +56,15 @@
     "babel-jest": "^26.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-flowtype": "^5.7.2",
-    "eslint-plugin-import": "^2.23.0",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "flow-bin": "^0.151.0",
     "jest": "^26.4.2",
     "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^17.0.2",
-    "rollup": "^2.47.0"
+    "rollup": "^2.48.0"
   },
   "dependencies": {
     "eslint": "^7.26.0"
