Package.json : Allow access to language-strings and formatters files

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "exports": {
     ".": {
       "import": "./es6/index.js",
-      "require": "./lib/index.js"
+      "require": "./lib/index.js",
+      "./lib/language-strings/*": "./lib/language-strings/*.js",
+      "./lib/formatters/*": "./lib/formatters/*.js"
     }
   },
   "module": "es6/index.js",
