--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     ".": {
       "import": "./es6/index.js",
       "require": "./lib/index.js"
-    }
+    },
+    "./lib/language-strings/*": "./lib/language-strings/*.js",
+    "./lib/formatters/*": "./lib/formatters/*.js"
   },
   "module": "es6/index.js",
   "scripts": {
