allow importing without the /lib/ prefix

--- a/package.json
+++ b/package.json
@@ -9,9 +9,25 @@
       "import": "./es6/index.js",
       "require": "./lib/index.js"
     },
+    "./dateParser": {
+      "import": "./es6/dateParser.js",
+      "require": "./lib/dateParser.js"
+    },
+    "./defaultFormatter": {
+      "import": "./es6/defaultFormatter.js",
+      "require": "./lib/defaultFormatter.js"
+    },
+    "./language-strings/*": {
+      "import": "./es6/language-strings/*.js",
+      "require": "./lib/language-strings/*.js"
+    },
+    "./formatters/buildFormatter": {
+      "import": "./es6/formatters/buildFormatter.js",
+      "require": "./lib/formatters/buildFormatter.js"
+    },
     "./lib/language-strings/*": {
-      "import": "./es6/language-strings/*",
-      "require": "./lib/language-strings/*"
+      "import": "./es6/language-strings/*.js",
+      "require": "./lib/language-strings/*.js"
     },
     "./lib/formatters/buildFormatter": {
       "import": "./es6/formatters/buildFormatter.js",
